<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:hint="@string/player_name_hint"
        android:inputType="textCapSentences"
        android:layout_below="@+id/tv_name"
         />

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_number_hint"
        android:inputType="number"
        android:textSize="24sp"
        android:layout_below="@+id/tv_number"
        />

        <TextView
            android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:layout_below="@+id/name_edit_text"
        android:textSize="20sp"
        />

    <ToggleButton
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/red"
        android:textOn="@string/blue"
        android:layout_below="@+id/number_edit_text"
        />


</RelativeLayout>